--- a/Style.css
+++ b/Style.css
@@ -75,7 +75,7 @@ header nav a:hover {
 }
 
 .main {
-	background:rgb(196, 196, 186) ;
+	background:rgb(80, 156, 156) ;
 	padding:20px;
 
 	flex:1 1 70%;
@@ -95,7 +95,7 @@ header nav a:hover {
 }
 
 aside {
-	background: whitesmoke;
+	background: rgb(126, 114, 236);
 	padding: 20px;
 	/*FLEX*/
 	flex:1 1 30%;
@@ -104,7 +104,7 @@ aside {
 	display: flex;
 	flex-wrap:wrap;
 	flex-direction:column;
-	justify-content:flex-start;
+	justify-content:center;
 }
 
 aside .widget {
@@ -127,7 +127,7 @@ footer {
 footer .links {
 	background:black;
 	display:flex;
-	flex-wrap:wrap;
+	flex-wrap: wrap;
 }
 
 footer .links a {
@@ -140,11 +140,11 @@ footer .links a {
 }
 
 footer .links a:hover {
-	background:black;
+	background:rgb(255, 255, 255);
 }
 
 footer .social {
-	background:#dd8b82
+	background:#702017
 ;
 }
 
